--- a/vignettes/M3Cvignette.Rmd
+++ b/vignettes/M3Cvignette.Rmd
@@ -79,19 +79,19 @@ Next, we will take a look at some of the plots M3C generates.
 This is a CDF plot of the GBM data we feed into the algorithm. We are looking for the value of K with the flattest curve and this can be quantified using the PAC metric (Șenbabaoğlu et al., 2014). Note, we have removed delta K from the algorithm because as we have recently shown, it performs badly. In the CDF plot we can see the overfitting effect of consensus clustering where as K increases so does the apparent stability of the solution, this we correct for by using a reference.
 \newline  
   
-![*Figure 1: CDF plot for real data*](/home/christopher/Desktop/M3C/vignette/CDF.png){width=50%}
+![*Figure 1: CDF plot for real data*](CDF.png){width=50%}
 
 This figure below is the PAC score, we can see an elbow at K = 4 which is suggestive this is the best K. However, we are not able to quantify how confident we are in this value without comparison versus a null dataset. Indeed, this may just be random noise.
 
-![*Figure 2: PAC score for real data*](/home/christopher/Desktop/M3C/vignette/PACscore.png){width=40%}
+![*Figure 2: PAC score for real data*](PACscore.png){width=40%}
 
 We then derive the PAC statistic which takes into account the reference PAC scores. This metric should be used instead of the PAC score for deciding class number, where the maxima is the number of clusters in the data. In this example it is 4. Note, the biology is of course important as well, so we may want to have a look at K = 5.
 
-![*Figure 3: PAC Statistic*](/home/christopher/Desktop/M3C/vignette/pacdiff.png){width=40%}
+![*Figure 3: PAC Statistic*](pacdiff.png){width=40%}
 
 Finally we calculate a p value from the distribution. This adds a measure of confidence to the PAC statistic and can be used to support arguments there is genuine structure in the data opposed to just noise. If p values do not reach significance it is implying the dataset is more similar to random data. In the GBM dataset we can see K = 4 and K = 5 reach signfiicance with an alpha of 0.05 and K = 4 is the most significant.
 
-![*Figure 4: Empirical p values*](/home/christopher/Desktop/M3C/vignette/pscore.png){width=40%}
+![*Figure 4: Empirical p values*](pscore.png){width=40%}
 
 Now we are convinced there are 4 clusters within this dataset which are not likely simply to have occurred by chance alone we can turn to examine the output objects that M3C generates. These facilitate clustering and heatmap rendering for publication.
 
@@ -119,7 +119,7 @@ NMF::aheatmap(data, annCol = annon, scale = 'row', Colv = NA, distfun = 'pearson
 
 ```
 
-![*Figure 5: aheatmap of GBM consensus clusters with tumour classification *](/home/christopher/Desktop/M3C/vignette/aheatmapGBMfour-cropped-vin.png){width=70%}
+![*Figure 5: aheatmap of GBM consensus clusters with tumour classification *](aheatmapGBMfour-cropped-vin.png){width=70%}
 
 The last thing we may want to do for publications is print the consensus matrix for our optimal clustering solution (K = 4), this should be quite crisp reflecting the flat distribution of the CDF. Note, we could have printed all the consensus heatmaps into the current directory using 'printheatmaps = T', however, in this case we will show how to extract the matrix, cluster and render it with the aheatmap function from the NMF package. We can see in this heatmap of the consensus matrix the clusters look quite clear supporting our view that there is 4 clusters.
 
@@ -130,7 +130,7 @@ pal <- rev(colorRampPalette(RColorBrewer::brewer.pal(9, "Reds"))(256)) # get som
 NMF::aheatmap(ccmatrix, annCol = annon, Colv = NA, Rowv = NA, color = rev(pal), scale = 'none') # plot the heatmap
 ```
 
-![*Figure 6: aheatmap of GBM consensus matrix *](/home/christopher/Desktop/M3C/vignette/aheatmapconsensusmatrix-vin-adj.png){width=56%}
+![*Figure 6: aheatmap of GBM consensus matrix *](aheatmapconsensusmatrix-vin-adj.png){width=56%}
 
 So we have now covered how to use the tool. Generally we recommend complexheatmap for publication clustering as it is more customisable, however, aheatmap (from the NMF package) is also nice and easy to use. 
 
@@ -148,7 +148,7 @@ We have included a function for generating simulated data as part of the package
   mydata <- as.data.frame(sim) # convert to data frame
 ```
 
-![*Figure 7: PCA of a 4 cluster simulated dataset *](/home/christopher/Desktop/M3C/vignette/simulatedresults/PCAsim 225 900 8 4 0.75 0.025 .png){width=42%}
+![*Figure 7: PCA of a 4 cluster simulated dataset *](PCAsim 225 900 8 4 0.75 0.025 .png){width=42%}
 
 We can now run M3C to evaluate the clusters in this well seperated example.
 
@@ -160,11 +160,11 @@ res <- M3C(mydata, cores=8, iters=100, ref_method = 'reverse-pca', montecarlo = 
 
 Now let's take a look at the results. Below we can see because these are very well seperated clusters that the p values reach a minimum quite easily and we have 4 and 5 both as optimal solutions using 100 iterations. However, in these situations we can just use the PAC-statistic to work out the optimal number of clusters.
 
-![*Figure 8: P values for 4 cluster simulated dataset *](/home/christopher/Desktop/M3C/vignette/simulatedresults/pscore.png){width=40%}
+![*Figure 8: P values for 4 cluster simulated dataset *](pscore2.png){width=40%}
 
 Now, using the PAC-statistic, we can see that 4 is clearly the number of clusters in this toy dataset. Normally, biological datasets are noisy and the groups are not well seperated so the p value method would be more effective, as we can seen in our own analyses.
 
-![*Figure 9: PAC-statistic for 4 cluster simulated dataset *](/home/christopher/Desktop/M3C/vignette/simulatedresults/pacdiff.png){width=37.5%}
+![*Figure 9: PAC-statistic for 4 cluster simulated dataset *](pacdiff2.png){width=37.5%}
 
 ### Conclusions
 
