--- a/vignettes/M3Cvignette.Rmd
+++ b/vignettes/M3Cvignette.Rmd
@@ -12,7 +12,7 @@ vignette: >
 
 ### Abstract
 
-An critical task in genomic data analyses for stratified medicine is class discovery which is accomplished through clustering. Consensus clustering has emerged as a very popular and effective machine learning approach for this task (Monti et al., 2001; Șenbabaoğlu et al., 2014). The algorithm aims to solve class number decision using a resampling method that produces a consensus rate between samples (a measure of stability). However, a critical problem with this, and other clustering approaches, is it does not use a reference datset nor test the null hypothesis. This was the basis for the development of Monte Carlo Consensus Clustering (M3C). M3C use a multi-enabled monte carlo simulation to generate a distribution of PAC (proportion of unambiguous clustering) scores from a null dataset with the same gene-gene correlation structure as the real, for deriving A) the PAC statistic and B) an empirical p value. These two metrics substantially improve accuracy, allow rejection of the null hypothesis K = 1, and provide confidence in the form of a p value for different clustering solutions. This approach deals with a number of pitfalls in current clustering approaches and thus provides a suitable framework for hypothesis testing.
+A central task in genomic data analyses for stratified medicine is class discovery which is accomplished through clustering. However, a critical problem with current approaches, is they do not use a reference datset to test the null hypothesis and derive a p value. We chose to reinvent the popular consensus clustering algorithm to include a hypothesis testing framework and by doing so developed Monte Carlo Consensus Clustering (M3C). M3C use a multi-enabled monte carlo simulation to generate a distribution of stability scores from a null dataset with the same gene-gene correlation structure as the real. This allows derivation of A) the relative cluster stability index and B) an empirical p value. A beta distribution is used to cheaply estimate p values below the minimum simulated PAC. Our new framework improves accuracy, permits rejection of the null hypothesis K = 1, removes systematic bias, and provides confidence in the form of a p value for different clustering solutions. Our approach deals with a number of major pitfalls in current clustering algorithms.
 
 ### Prerequisites
 
@@ -49,7 +49,7 @@ library(ggsci) # more cool colours
 
 Next, we run the algorithm with 100x monte carlo iterations and 100x inner replications for the real data and reference. The iterations parameter can be increased to 1000 later for a final analysis. Plots from the tool and an .csv file with the numerical outputs are printed into the working directory (printres = T). We will set the seed in this example, incase you wish to repeat our results exactly. We will add the annotation file for easier plotting later on (des = desx).
 
-We always recommend saving the workspace after M3C if running higher numbers of iterations, because the runtimes can be quite long. We have removed hierarchical clustering and k means from this algorithm, because they performed poorly in our simulations or too slow relative to PAM. M3C uses PAM with Euclidean distance. The reference method that generates the null datasets is best left to the default setting which is 'reverse-PCA' that maintains the correlation structure of the data using the principle component loadings.
+We always recommend saving the workspace after M3C if running higher numbers of iterations, because the runtimes can be quite long. We have removed hierarchical clustering from this algorithm and recommend against k means, because they performed either with poor accuracy in our simulations or too slow relative to PAM, respectively. M3C uses PAM with Euclidean distance. The reference method that generates the null datasets is best left to the default setting which is 'reverse-PCA' that maintains the correlation structure of the data using the principle component loadings.
 
 ```{r, include=FALSE}
 res <- M3C(mydata, cores=1, iters=100, ref_method = 'reverse-pca', montecarlo = TRUE,
@@ -57,7 +57,7 @@ res <- M3C(mydata, cores=1, iters=100, ref_method = 'reverse-pca', montecarlo = 
                          printheatmaps = FALSE, seed = 123, des = desx)
 ```
 
-The scores and p values are contained within the res$scores object. So we can see the PAC_STAT reaches a maxima at K = 4 (pac_stat=0.33), the monte carlo p value supports this decision (p=0.05). This means we can reject the null hypothesis that K = 1 for this dataset because we have achieved significance versus a dataset with no clusters, but with identical gene-gene correlation structure. For p values that can extend beyond the lower limits imposed by the monte carlo simulation we use estimated parameters from the simulation to generate a beta distribution, the BETA_P in this case study is 0.031. We may of course want to take a look at other significant or near significant clustering solutions and how they relate to our variables of investigation.
+The scores and p values are contained within the res$scores object. So we can see the RCSI reaches a maxima at K = 4 (RSCI=0.33), the monte carlo p value supports this decision (p=0.033). This means we can reject the null hypothesis that K = 1 for this dataset because we have achieved significance versus a dataset with no clusters (but with identical gene-gene correlation structure). For p values that can extend beyond the lower limits imposed by the monte carlo simulation we use estimate parameters from the simulation to generate a beta distribution, the BETA_P in this case study is 0.033. We may of course want to take a look at other significant or near significant clustering solutions and how they relate to our variables of investigation.
 
 ```{r}
 res$scores
@@ -65,20 +65,20 @@ res$scores
 
 Next, we will take a look at some of the plots M3C generates.  
 
-This is a CDF plot of the GBM data we feed into the algorithm. We are looking for the value of K with the flattest curve and this can be quantified using the PAC metric (Șenbabaoğlu et al., 2014). Note, we have removed delta K from the algorithm because as we have recently shown, it performs badly. In the CDF plot we can see the overfitting effect of consensus clustering where as K increases so does the apparent stability of the solution, this we correct for by using a reference.
+This is a CDF plot of the GBM data we feed into the algorithm. We are looking for the value of K with the flattest curve and this can be quantified using the PAC metric (Șenbabaoğlu et al., 2014). Note, we have removed delta K from the algorithm because as we and others (Șenbabaoğlu et al., 2014) have recently shown, it performs badly. In the CDF plot we can see the overfitting effect of consensus clustering where as K increases so does the apparent stability of the solution, this we correct for by using a reference.
 \newline  
   
 ![*Figure 1: CDF plot for real data*](CDF.png){width=40%}
 
-This figure below is the PAC score, we can see an elbow at K = 4 which is suggestive this is the best K. However, we are not able to quantify how confident we are in this value without comparison versus a null dataset. Indeed, this may just be random noise.
+This figure below is the PAC score, we can see an elbow at K = 4 which is suggestive this is the best K. However, we are not able to quantify how confident we are in this value without comparison versus a null dataset. Indeed, this may just be the result of random noise.
 
 ![*Figure 2: PAC score for real data*](PACscore.png){width=30%}
 
-We then derive the PAC statistic which takes into account the reference PAC scores. This metric should be used instead of the PAC score for deciding class number, where the maxima is the number of clusters in the data. In this example it is 4. Note, the biology is of course important as well, so we may want to have a look at K = 5.
+We then derive the RCSI which takes into account the reference PAC scores, but not the distribution. This metric is better than the PAC score for deciding class number, where the maxima is the number of clusters in the data. In this example the RCSI has an optima at K=4.
 
 ![*Figure 3: PAC Statistic*](pacdiff.png){width=30%}
 
-Finally we calculate a p value from the distribution. This adds a measure of confidence to the PAC statistic and can be used to support arguments there is genuine structure in the data opposed to just noise. If p values do not reach significance it is implying the dataset is more similar to random data. In the GBM dataset we can see K = 4 and K = 5 reach signfiicance with an alpha of 0.05 and K = 4 is the most significant.
+Finally we calculate a p value from the distribution, here we display the p values from the beta distribution, note the monte carlo p values are slightly better, but the method tends to take longer to compute. If none of the p values reach significance over a reasonable range of K (e.g. 10), then we accept the null hypothesis. In the GBM dataset we can see K = 4 reaches signfiicance with an alpha of 0.05 (red dotted line).
 
 ![*Figure 4: Empirical p values*](pscore.png){width=30%}
 
@@ -122,7 +122,7 @@ NMF::aheatmap(ccmatrix, annCol = annon, Colv = NA, Rowv = NA,
 
 ![*Figure 6: aheatmap of GBM consensus matrix *](aheatmapconsensusmatrix-vin2.png){width=53%}
 
-So we have now covered the basic use of M3C. Generally we recommend complexheatmap for rendering of heatmaps as it is more customisable for publications, however, aheatmap (from the NMF package) is also nice and easy to use. 
+So we have now covered the basic use of M3C. Generally, we recommend complexheatmap for rendering of heatmaps as it is more customisable for publications, however, aheatmap (from the NMF package) is also nice and easier to use. 
 
 Happy cluster hunting!
 
@@ -142,7 +142,7 @@ We have included a function for generating simulated data as part of the package
 
 ### Conclusions
 
-In this tutorial, we have seen that M3C can provide statistical validation of clustering results as well as using relative scores. Although our monte carlo approach is computationally expensive, this is justified by 3 reasons; 1) increased performance relative to other methods, 2) the ability to reject the null hypothesis, 3) To assess confidence of the results using a p value instead of a relative score. In our studies of real data, we have seen M3C effectively drives class discovery throughout different stratified medicine projects.
+In this tutorial, we have seen that M3C can provide statistical validation of clustering results as well as using relative scores. Our Monte Carlo clustering approach is computationally expensive, but this is justified by 4 reasons; 1) Increased performance relative to other methods, 2) The ability to reject the null hypothesis, 3) The ability to assess confidence of using a p value instead of just a relative score, 3) The removal of systematic bias inherant in the results. In our studies of real data, we have seen M3C effectively drives class discovery throughout different stratified medicine projects.
 
 ### References
 
