--- a/vignettes/M3Cvignette.Rmd
+++ b/vignettes/M3Cvignette.Rmd
@@ -34,7 +34,7 @@ Annotation data frame, where every row is a patient/sample, columns refer to met
 
 The M3C package contains the GBM cancer microarray dataset for testing. There is an accepted cluster solution of 4. First we load the package which also loads the GBM data.
 
-```{r, include=FALSE}
+```{r, message=FALSE}
 library(M3C)
 library(NMF) # loading for aheatmap plotting function
 library(gplots) # loading this for nice colour scale
@@ -47,14 +47,14 @@ library(ggsci) # more cool colours
 
 ### Running M3C
 
-Next, we run the algorithm with 100x monte carlo iterations and 100x inner replications for the real data and reference. The iterations parameter can be increased to 1000 later for a final analysis. Plots from the tool and an .csv file with the numerical outputs are printed into the working directory (printres = T). We will set the seed in this example, incase you wish to repeat our results exactly. We will add the annotation file for easier plotting later on (des = desx).
+Next, we run the algorithm with 100x monte carlo iterations and 100x inner replications for the real data and reference. The iterations parameter can be increased to 1000 later for a final analysis. Plots from the tool and an .csv file with the numerical outputs are printed into the working directory (printres = T). We will set the seed in this example, incase you wish to repeat our results exactly. We will add the annotation file for more streamlined plotting later on (des = desx).
 
-We always recommend saving the workspace after M3C if running higher numbers of iterations, because the runtimes can be quite long. We have removed hierarchical clustering from this algorithm and recommend against k means, because they performed either with poor accuracy in our simulations or too slow relative to PAM, respectively. M3C uses PAM with Euclidean distance. The reference method that generates the null datasets is best left to the default setting which is 'reverse-PCA' that maintains the correlation structure of the data using the principle component loadings.
+We always recommend saving the workspace after M3C if running higher numbers of iterations, because the runtimes can be quite long. We have removed hierarchical clustering from this algorithm and recommend against k means, because they performed either with poor accuracy in our simulations or too slow relative to PAM, respectively. M3C uses PAM with Euclidean distance. The reference method that generates the null datasets is best left to the default setting which is 'reverse-PCA' that maintains the correlation structure of the data using the principle component loadings. We will set the removeplots option to TRUE in this example to remove plots from the vignette, normally this is FALSE by default.
 
-```{r, include=FALSE}
+```{r, message=FALSE, results='hide'}
 res <- M3C(mydata, cores=1, iters=100, ref_method = 'reverse-pca', montecarlo = TRUE,
                          printres = TRUE, maxK = 10, showheatmaps = FALSE, repsreal = 100, repsref = 100,
-                         printheatmaps = FALSE, seed = 123, des = desx)
+                         printheatmaps = FALSE, seed = 123, des = desx, removeplots = TRUE)
 ```
 
 The scores and p values are contained within the res$scores object. So we can see the RCSI reaches a maxima at K = 4 (RSCI=0.33), the monte carlo p value supports this decision (p=0.033). This means we can reject the null hypothesis that K = 1 for this dataset because we have achieved significance versus a dataset with no clusters (but with identical gene-gene correlation structure). For p values that can extend beyond the lower limits imposed by the monte carlo simulation we use estimate parameters from the simulation to generate a beta distribution, the BETA_P in this case study is 0.033. We may of course want to take a look at other significant or near significant clustering solutions and how they relate to our variables of investigation.
@@ -74,11 +74,11 @@ This figure below is the PAC score, we can see an elbow at K = 4 which is sugges
 
 ![*Figure 2: PAC score for real data*](PACscore.png){width=30%}
 
-We then derive the RCSI which takes into account the reference PAC scores, but not the distribution. This metric is better than the PAC score for deciding class number, where the maxima is the number of clusters in the data. In this example the RCSI has an optima at K=4.
+We then derive the RCSI which takes into account the reference PAC scores, but not the shape of the distribution. This metric is better than the PAC score for deciding class number, where the maxima is the number of clusters in the data. In this example the RCSI has an optima at K=4. It generally requires fewer iterations than deriving the empirical p values and it inspired by the GAP-statistic.
 
-![*Figure 3: PAC Statistic*](pacdiff.png){width=30%}
+![*Figure 3: RCSI*](pacdiff.png){width=30%}
 
-Finally we calculate a p value from the distribution, here we display the p values from the beta distribution, note the monte carlo p values are slightly better, but the method tends to take longer to compute. If none of the p values reach significance over a reasonable range of K (e.g. 10), then we accept the null hypothesis. In the GBM dataset we can see K = 4 reaches signfiicance with an alpha of 0.05 (red dotted line).
+Finally we calculate a p value from the distribution, here we display the p values from the beta distribution, note the monte carlo p values are slightly better, but the method tends to take longer to compute. If none of the p values reach significance over a reasonable range of K (e.g. 10), then we accept the null hypothesis. In the GBM dataset we can see K = 4 reaches signfiicance with an alpha of 0.05 (red dotted line), therefore we can reject the null hypothesis for the GBM dataset.
 
 ![*Figure 4: Empirical p values*](pscore.png){width=30%}
 
@@ -132,10 +132,8 @@ We will now turn to an extra function of the package, which can be used for benc
 
 We have included a function for generating simulated data as part of the package to test clustering algorithms. This cluster simulator is simple to use. This simulator, using the code below, generates a dataset with 225 samples, 900 features, a radius cut-off for the initial square of 8, a cluster number of 4, a seperation of clusters of 0.75, and a degree of noise added to each co-ordinate of 0.025. After running, a PCA will print of the data so we can visualise the 4 clusters in principle component space.
 
-```{r,fig.show = 'hide',include=FALSE}
+```{r,fig.show = 'hide',message=FALSE,results='hide'}
   res <- clustersim(225, 900, 8, 4, 0.75, 0.025, print = FALSE, seed=123)
-  sim <- res$simulated_data # we extract the simulated data from the results list
-  mydata <- as.data.frame(sim) # convert to data frame
 ```
 
 ![*Figure 7: PCA of a 4 cluster simulated dataset *](PCAsim.png){width=42%}
