--- a/vignettes/M3Cvignette.Rmd
+++ b/vignettes/M3Cvignette.Rmd
@@ -68,19 +68,19 @@ Next, we will take a look at some of the plots M3C generates.
 This is a CDF plot of the GBM data we feed into the algorithm. We are looking for the value of K with the flattest curve and this can be quantified using the PAC metric (Șenbabaoğlu et al., 2014). Note, we have removed delta K from the algorithm because as we and others (Șenbabaoğlu et al., 2014) have recently shown, it performs badly. In the CDF plot we can see the overfitting effect of consensus clustering where as K increases so does the apparent stability of the solution, this we correct for by using a reference.
 \newline  
   
-![*Figure 1: CDF plot for real data*](CDF.png){width=40%}
+![*Figure 1: CDF plot for real data*](CDF.png)
 
 This figure below is the PAC score, we can see an elbow at K = 4 which is suggestive this is the best K. However, we are not able to quantify how confident we are in this value without comparison versus a null dataset. Indeed, this may just be the result of random noise.
 
-![*Figure 2: PAC score for real data*](PACscore.png){width=30%}
+![*Figure 2: PAC score for real data*](PACscore.png)
 
 We then derive the RCSI which takes into account the reference PAC scores, but not the shape of the distribution. This metric is better than the PAC score for deciding class number, where the maxima is the number of clusters in the data. In this example the RCSI has an optima at K=4. It generally requires fewer iterations than deriving the empirical p values and it inspired by the GAP-statistic.
 
-![*Figure 3: RCSI*](pacdiff.png){width=30%}
+![*Figure 3: RCSI*](pacdiff.png)
 
 Finally we calculate a p value from the distribution, here we display the p values from the beta distribution, note the monte carlo p values are slightly better, but the method tends to take longer to compute. If none of the p values reach significance over a reasonable range of K (e.g. 10), then we accept the null hypothesis. In the GBM dataset we can see K = 4 reaches signfiicance with an alpha of 0.05 (red dotted line), therefore we can reject the null hypothesis for the GBM dataset.
 
-![*Figure 4: Empirical p values*](pscore.png){width=30%}
+![*Figure 4: Empirical p values*](pscore.png)
 
 Now we are convinced there are 4 clusters within this dataset which are not likely simply to have occurred by chance alone we can turn to examine the output objects that M3C generates. These facilitate clustering and heatmap rendering for publication.
 
@@ -108,7 +108,7 @@ NMF::aheatmap(data, annCol = annon, scale = 'row', Colv = NA, distfun = 'pearson
 
 ```
 
-![*Figure 5: aheatmap of GBM consensus clusters with tumour classification *](aheatmapGBMfour-vin2.png){width=70%}
+![*Figure 5: aheatmap of GBM consensus clusters with tumour classification *](aheatmapGBMfour-vin2.png)
 
 The last thing we may want to do for publications is print the consensus matrix for our optimal clustering solution (K = 4), this should be quite crisp reflecting the flat distribution of the CDF. Note, we could have printed all the consensus heatmaps into the current directory using 'printheatmaps = T', however, in this case we will show how to extract the matrix, cluster and render it with the aheatmap function from the NMF package. We can see in this heatmap of the consensus matrix the clusters look quite clear supporting our view that there is 4 clusters.
 
@@ -120,7 +120,7 @@ NMF::aheatmap(ccmatrix, annCol = annon, Colv = NA, Rowv = NA,
               color = rev(pal), scale = 'none') # plot the heatmap
 ```
 
-![*Figure 6: aheatmap of GBM consensus matrix *](aheatmapconsensusmatrix-vin2.png){width=53%}
+![*Figure 6: aheatmap of GBM consensus matrix *](aheatmapconsensusmatrix-vin2.png)
 
 So we have now covered the basic use of M3C. Generally, we recommend complexheatmap for rendering of heatmaps as it is more customisable for publications, however, aheatmap (from the NMF package) is also nice and easier to use. 
 
@@ -136,7 +136,7 @@ We have included a function for generating simulated data as part of the package
   res <- clustersim(225, 900, 8, 4, 0.75, 0.025, print = FALSE, seed=123)
 ```
 
-![*Figure 7: PCA of a 4 cluster simulated dataset *](PCAsim.png){width=42%}
+![*Figure 7: PCA of a 4 cluster simulated dataset *](PCAsim.png)
 
 ### Conclusions
 
